# pysatModels

./: .gitignore  .travis.yml  .zenodo.json  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  description.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_requirements.txt
.github/: pull_request_template.md
.github/workflows/: docs.yml  main.yml  pip_rc_install.yml  pysat_rc.yml  pysatnasa.yml
docs/: Makefile  citing.rst  conf.py  develop_guide.rst  examples.rst  history.rst  index.rst  installation.rst  overview.rst  requirements.txt  supported_models.rst  utils.rst
docs/examples/: ex_compare.rst  ex_extract.rst  ex_init.rst  ex_match.rst
pysatModelUtils/: __init__.py  _core.py
pysatModelUtils/models/: __init__.py
pysatModelUtils/tests/: test_model_utils.py  test_utils_extract.py  test_utils_match.py
pysatModelUtils/utils/: extract.py  match.py
pysatModels/: __init__.py
pysatModels/instruments/: __init__.py  pysat_dineof.py
pysatModels/models/: __init__.py  aether_main.py  pydineof_dineof.py  pysat_dineof.py  pysat_testmodel.py  sami2py_sami2.py  ucar_tiegcm.py
pysatModels/models/methods/: __init__.py  general.py
pysatModels/tests/: __init__.py  test_methods_general.py  test_models.py  test_utils_compare.py  test_utils_convert.py  test_utils_extract.py  test_utils_match.py  test_utils_testing.py
pysatModels/tests/test_data/: dineof-2009-01-01.nc
pysatModels/utils/: __init__.py  compare.py  convert.py  extract.py  match.py  testing.py
