[metadata]
name = pysatModels
version = file: pysatModels/version.txt
url = https://github.com/pysat/pysatModels
author = Angeline G. Burrell
author_email = angeline.burrell@nrl.navy.mil
description = 'Supports model analysis and model-data comparisons'
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Alpha
    Topic :: Scientific/Engineering :: Physics
    Intended Audience :: Science/Research
    License :: BSD
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
license_file = LICENSE

[options]
python_requires = >= 3.5
setup_requires = setuptools >= 38.6; pip >= 10
packages = find:
include_package_data = True
zip_safe = False
install_requires = numpy
		   pandas
		   pyForecastTools
		   pysat
		   scipy
		   xarray

[coverage:run]

[coverage:report]

[flake8]
max-line-length = 80
ignore = W503

[tool:pytest]
markers =
    all_inst: tests all instruments
    download: tests for downloadable instruments
    no_download: tests for instruments without download support
    first: first tests to run
    second: second tests to run
